# Transformers4Rec

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .python-version  CLA.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  benchmarking.ipynb  generate_randomized_input_for_benchmarking.ipynb  index.html  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tf4rec_example-v2.ipynb  tox.ini  train_and_save_models_for_benchmarking.ipynb  transf_exp_main_modified.py  versioneer.py
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
categories/: unique.category.parquet  unique.item_id.parquet  unique.session_id.parquet
ci/: build_and_test.sh  ignore_codespell_words.txt  pr.gpu.Jenkinsfile  test_integration.sh  test_unit.sh
codes/: .gitignore  README.md  chameleon_metrics.py  custom_trainer.py  custom_xlnet_config.py  loss_functions.py  main_runner.py  meta_model.py  metrics.py  modeling_xlnet.py  recsys_args.py  recsys_baselines_main.py  recsys_data.py  recsys_data_schema.py  recsys_main.py  recsys_meta_model.py  recsys_metrics.py  recsys_models.py  recsys_trainer.py  recsys_trainer_v2.py  recsys_utils.py  requirements.txt  trainer.py  utils.py
container/: Dockerfile  Dockerfile.dev  Dockerfile.dev_nvt  Dockerfile.ngc  Dockerfile.ngc_nvt  README.md
containers/: Dockerfile.dev  Dockerfile.dev_nvt  Dockerfile.ngc  Dockerfile.ngc_nvt  Dockerfile.ngc_nvt_theano  README.md
datasets/: README.md
docs/: Makefile  README.md
examples/: README.md  tf4rec_example-draft.ipynb
hf4rec/: README.md  recsys_args.py  (+9 more)
(+5556 files in other folders)
